Fixed bug on last trick viewing feature
Previously, both chatbox and lasttrick overlaps when both are toggled. Now, toggling one will close the other

--- a/web/src/App.css
+++ b/web/src/App.css
@@ -97,10 +97,15 @@
   border: none;
   border-radius: 10vh;
   z-index: 101;
+  transition: 0.3s;
 }
 
 .chatToggleButton:hover {
   background-color: lightgray;
+}
+
+.chatToggleButton:active {
+  transform: scale(0.95);
 }
 
 .chatIconClass {
